# jsonschemagenerator-desktop

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/legal/: ABOUT.md  PRIVACY_POLICY.md  TERMS_OF_USE.md  license.md
src/: App.css  App.tsx  ExampleLoader.ts  GeneratedSchemaPanel.tsx  SchemaDesigner.tsx  Workbench.tsx  css.d.ts  global.d.ts  index.css  index.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  geiger.json  tauri.conf.json
src-tauri/icons/: NOTICE.md
src-tauri/src/: lib.rs  main.rs
src/api/: NOTICE.md  anthropic.json  google-gemini.json  openai.json  perplexity.json
src/components/: FieldEditor.tsx  LabelSidebar.module.css  LabelSidebar.tsx  LegalLinks.tsx  SectionHeader.tsx  formatJsonWithColor.ts  jsonSchemaGenerator.ts
src/examples/: 10q.json  NOTICE.md  helloworld.json  labresults.json
src/examples/assets/10q/: 10q_content.txt  10q_output.json
src/examples/assets/helloworld/: helloworld_content.txt  helloworld_output.json
src/examples/assets/helloworld/app/: DessertWorldMap.tsx  data.ts  demo.css  index.tsx  section.tsx  types.ts
src/examples/assets/labresults/: labresults_content.txt  labresults_output.json
src/lib/: constants.tsx
src/style/: AppLayout.ts  FieldEditor.module.css  GeneratedSchemaPanelLayout.ts  LabelSidebarLayout.ts  SchemaDesignerLayout.ts  index.css
src/utils/: ideHelperGenerator.ts  loadProviderConfig.ts  providerSnippets.ts
