###############################################################################
# Cargo manifest for the Tauri desktop wrapper
###############################################################################
[package]
name         = "jsonschemagenerator-desktop"
version      = "0.1.0"
edition      = "2021"

# ── metadata ────────────────────────────────────────────────────────────────
description  = "StructOut Designer – Tauri desktop shell"
authors      = ["Sesh Ragavachari <sesh@example.com>"]
repository   = "https://github.com/your-org/structout-desktop"
homepage     = "https://structout.io"

# SPDX identifier plus a pointer to the full text in /LICENSE
license-file = "LICENSE"

keywords     = ["tauri", "llm", "json-schema", "gui"]
categories   = ["gui"]

###############################################################################
# Library target (see Windows naming-collision note)
###############################################################################
[lib]
name        = "jsonschemagenerator_desktop_lib"   # keep “_lib” suffix
crate-type  = ["staticlib", "cdylib", "rlib"]

###############################################################################
# Build-time and runtime dependencies
###############################################################################
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
